unpackaged/main/default/objects/Objective__c/fields/Check_Assignee__c.field-meta.xml
<CustomField>
    <fullName>Check_Assignee__c</fullName>
    <description>Checks whether the current user is the assignee</description>
    <formula>Assigned_To__c =  $User.Id</formula>
    <inlineHelpText>Is the assignee the current user ?</inlineHelpText>
    <label>Check Assignee</label>
    <type>Checkbox</type>
</CustomField>