unpackaged/main/default/objects/Objective__c/fields/Licences_Target_Amount__c.field-meta.xml
<CustomField>
    <fullName>Licences_Target_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Licences Booking Target</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>