unpackaged/main/default/objects/Objective__c/fields/Objective_Target_Amount__c.field-meta.xml
<CustomField>
    <fullName>Objective_Target_Amount__c</fullName>
    <formula>Licences_Target_Amount__c +  Prof_Services_Target_Amount__c + SaaS_Target_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Objective Target Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>