unpackaged/main/default/objects/Objective__c/fields/Parent_Objective__c.field-meta.xml
<CustomField>
    <fullName>Parent_Objective__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Objective</label>
    <referenceTo>Objective__c</referenceTo>
    <relationshipLabel>Objectives</relationshipLabel>
    <relationshipName>Objectives</relationshipName>
    <type>Lookup</type>
</CustomField>