unpackaged/main/default/objects/Objective__c/fields/SaaS_Target_Amount__c.field-meta.xml
<CustomField>
    <fullName>SaaS_Target_Amount__c</fullName>
    <label>SaaS Booking Target</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>