unpackaged/main/default/objects/Objective__c/fields/Targeting_Plan__c.field-meta.xml
<CustomField>
    <fullName>Targeting_Plan__c</fullName>
    <label>Targeting Plan</label>
    <referenceTo>Targeting_Plan__c</referenceTo>
    <relationshipLabel>Objectives</relationshipLabel>
    <relationshipName>Objectives</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>