unpackaged/main/default/objects/Objective__c/recordTypes/Objective_By_Amount.recordType-meta.xml
<RecordType>
    <fullName>Objective_By_Amount</fullName>
    <active>true</active>
    <label>Objective By Amount</label>
</RecordType>