unpackaged/main/default/objects/Objective__c/recordTypes/Objective_By_Quantity.recordType-meta.xml
<RecordType>
    <fullName>Objective_By_Quantity</fullName>
    <active>false</active>
    <label>Objective By Quantity</label>
</RecordType>