unpackaged/main/default/objects/Objective__c/validationRules/VR_Obj_01_OnlyPacOwnerCanEditorCreate.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_Obj_01_OnlyPacOwnerCanEditorCreate</fullName>
    <active>true</active>
    <errorConditionFormula>AND (
				NOT(Targeting_Plan__r.Check_Owner__c), 
				 $Profile.Name != "System Administrator"
				)</errorConditionFormula>
    <errorMessage>Only the PAC owner or an admin can create or edit an objective.</errorMessage>
</ValidationRule>